--- a/fusion/CMakeLists.txt
+++ b/fusion/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required( VERSION 3.20)
 
 
+set(SWIFT_BLAS_BACKEND "FLEXIBLAS" CACHE STRING "BLAS implementation for SWIFTWARE to use")
+set_property(CACHE SWIFT_BLAS_BACKEND PROPERTY STRINGS MKL OpenBLAS Apple FLEXIBLAS)
+
+
 project(sparse_fusion CXX C )
 
 if(PROFILING_WITH_PAPI)
