fixed compile errors

--- a/fusion/example/CMakeLists.txt
+++ b/fusion/example/CMakeLists.txt
@@ -7,10 +7,10 @@ include_directories(
 
 project(examples)
 
-if(NOT TARGET MKL::MKL)
-    set(MKL_INTERFACE "lp64")
-    find_package(MKL CONFIG OPTIONAL_COMPONENTS)
-endif()
+#if(NOT TARGET MKL::MKL)
+#    set(MKL_INTERFACE "lp64")
+#    find_package(MKL CONFIG OPTIONAL_COMPONENTS)
+#endif()
 
 if(TARGET MKL::MKL)
     add_definitions(-DMKL)
