--- a/fusion/scripts/plotter/spmm_spmm_config.yaml
+++ b/fusion/scripts/plotter/spmm_spmm_config.yaml
@@ -1,25 +1,27 @@
 experiment_name: "spmm_spmm"
 implementations:
-  #  - name: "SpMM_SpMM_CSC_Interleaved_Atomic_FusedParallel"
-  #    color: "green"
-  #    tuned: True
-  #    tune_parameter: "Iter Per Partition"
-  #  - name: "SpMM_SpMM_CSC_Separated_FusedParallel"
-  #    color: "blue"
-  #    tuned: True
-  #    tune_parameter: "Iter Per Partition"
+#  - name: "SpMM_SpMM_CSC_Interleaved_Atomic_FusedParallel"
+#    color: "Fused with atomic"
+#    tuned: True
+#    tune_parameter: "Iter Per Partition"
+  - name: "SpMM_SpMM_Demo_FusedCSCAtomic"
+    representation: "Atomic Tiling"
+    color: "gray"
+    tuned: True
+    tune_parameters:
+      - "Iter Per Partition"
 #  - name: "SpMM_SpMM_CSC_Interleaved_Coloring_FusedParallel"
 #    representation: "Tile Fused CSC"
 #    color: "red"
 #    tuned: True
 #    tune_parameters:
 #      - "Iter Per Partition"
-#  - name: "SpMM_SpMM_CSC_Interleaved_Coloring_FusedParallel_Vectorized_Packed"
-#    representation: "Tile Fused CSC Avx2 Packed"
-#    color: "dodgerblue"
-#    tuned: True
-#    tune_parameters:
-#      - "Iter Per Partition"
+  - name: "SpMM_SpMM_FusedParallel_Redundant"
+    representation: "Overlapped Tiling"
+    color: "blue"
+    tuned: True
+    tune_parameters:
+      - "Iter Per Partition"
 #  - name: "SpMM_SpMM_CSC_Interleaved_Coloring_FusedParallel_Vectorized"
 #    representation: "Tile Fused CSC Avx2"
 #    color: "red"
@@ -56,20 +58,20 @@ implementations:
 #    tune_parameters:
 #      - "MTile"
 #      - "NTile0"
-  - name: "SpMM_SpMM_Demo_UnFusedParallel"
-    representation: "Unfused Loops"
-    color: "maroon"
-    tuned: False
+#  - name: "SpMM_SpMM_Demo_UnFusedParallel"
+#    representation: "Unfused"
+#    color: "deepskyblue"
+#    tuned: False
 #  - name: "SpMM_SpMM_Separated_FusedParallel"
 #    representation: "Tile Fused Seperated"
 #    color: "purple"
 #    tuned: True
 #    tune_parameters:
 #      - "Iter Per Partition"
-  - name: "SpMM_SpMM_MKL"
-    representation: "MKL"
-    color: "black"
-    tuned: False
+#  - name: "SpMM_SpMM_MKL"
+#    representation: "UnFused MKL"
+#    color: "green"
+#    tuned: False
 #  - name: "SpMM_SpMM_FusedParallel"
 #    representation: "Tile Fused"
 #    color: "green"
@@ -88,9 +90,9 @@ implementations:
 #    tuned: True
 #    tune_parameters:
 #      - "Iter Per Partition"
-#  - name: "SpMM_SpMM_FusedParallel_Separated"
-#    representation: "Tile Fused Seperated (no conditional)"
-#    color: "red"
+#  - name: "SpMM_SpMM_FusedParallel_VariableTileSize"
+#    representation: "Tile Fused"
+#    color: "maroon"
 #    tuned: True
 #    tune_parameters:
 #      - "Iter Per Partition"
@@ -100,18 +102,31 @@ implementations:
 #    tuned: True
 #    tune_parameters:
 #      - "Iter Per Partition"
-#  - name: "SpMM_SpMM_FusedParallelAvx512"
-#    representation: "Tile Fused Avx512 variable tile size"
-#    color: "blue"
-#    tuned: True
-#    tune_parameters:
-#      - "Iter Per Partition"
-  - name: "SpMM_SpMM_FusedParallelAvx256"
-    representation: "Tile Fused Avx2 Fixed tile size"
-    color: "goldenrod"
+#  - name: "SpMM_SpMM_UnFusedParallelAvx512"
+#    representation: "UnFused Baseline"
+#    color: "deepskyblue"
+#    tuned: False
+##
+  - name: "SpMM_SpMM_FusedParallelAvx512"
+    representation: "Tile Fusion"
+    color: "maroon"
     tuned: True
     tune_parameters:
       - "Iter Per Partition"
+#  - name: "SpMM_SpMM_UnFusedParallel_VectorizedAvx256"
+#    representation: "UnFused Baseline"
+#    color: "deepskyblue"
+#    tuned: False
+#  - name: "SpMM_SpMM_UnFusedParallelAvx256"
+#    representation: "UnFused Baseline"
+#    color: "deepskyblue"
+#    tuned: False
+#  - name: "SpMM_SpMM_FusedParallelAvx256"
+#    representation: "Tile Fusion"
+#    color: "maroon"
+#    tuned: True
+#    tune_parameters:
+#      - "Iter Per Partition"
 #  - name: "SpMM_SpMM_FusedParallel_Conditional_Interleaved_Avx512"
 #    representation: "Fused Conditional Interleaved"
 #    color: "goldenrod"
@@ -132,11 +147,6 @@ implementations:
 #  - name: "SpMM_MKL"
 #    color: "brown"
 #    tuned: False
-#  - name: "SpMM_Vectorized_2_16"
-#    color: "red"
-#    tuned: True
-#    tune_parameters:
-#      - "MTile"
 #  - name: "SpMM_Vectorized_4_8"
 #    color: "red"
 #    tuned: True
@@ -157,4 +167,5 @@ feature_sizes:
 matrices:
   - "tri-banded-10000.mtx"
   - "tri-banded.mtx"
-baseline: "SpMM_SpMM_MKL"
+baseline: "SpMM_SpMM_FusedParallelAvx512"
+target: "SpMM_SpMM_FusedParallelAvx512"
