--- a/fusion/CMakeLists.txt
+++ b/fusion/CMakeLists.txt
@@ -66,10 +66,13 @@ target_link_libraries(fusion PRIVATE
         argparse
         )
 
+find_package(CUDA OPTIONAL_COMPONENTS)
+find_package(CUDAToolkit OPTIONAL_COMPONENTS)
 
 
 add_subdirectory(example)
 add_subdirectory(gcn)
 add_subdirectory(jacobi)
 add_subdirectory(spmv-spmv)
-add_subdirectory(torch)
+#add_subdirectory(torch)
+add_subdirectory(gpu)
