Running an example of cuSparse, needs testing and learning cuSparse buffer

--- a/fusion/gpu/CMakeLists.txt
+++ b/fusion/gpu/CMakeLists.txt
@@ -36,6 +36,7 @@ target_link_libraries(spmm_demo_gpu
         cusparse
         cublas
         CUDA::cusparse
+        fusion
         aggregation
         swbench::swbench
         )
