update gpu plot script

--- a/fusion/scripts/plot_gpu/fused_conf.yaml
+++ b/fusion/scripts/plot_gpu/fused_conf.yaml
@@ -7,14 +7,20 @@ impls:
     repr: "Unfused Baseline"
   - name: "GPU_Fused_SeqReduceRowBalance"
     repr: "Fused"
-#  - name: "GPU_Fused_SeqReduceBColsBlocking_4"
-#    repr: "Fused Blocking(4)"
-#  - name: "GPU_Fused_SeqReduceBColsBlocking_8"
-#    repr: "Fused Blocking(8)"
-  - name: "GPU_Fused_SeqReduceBColsBlocking_16"
-    repr: "Fused Blocking(16)"
-  - name: "GPU_Fused_SeqReduceBColsBlocking_32"
-    repr: "Fused Blocking(32)"
+  - name: "GPU_Fused_Reordered_HighFusionRatio_8"
+    repr: "Fused(High Fusion Ratio 8 + Reordered)"
+  - name: "GPU_Fused_Reordered_HighFusionRatio_16"
+    repr: "Fused(High Fusion Ratio 16 + Reordered)"
+  - name: "GPU_Fused_Reordered_HighFusionRatio_32"
+    repr: "Fused(High Fusion Ratio 32 + Reordered)"
+  - name: "GPU_Fused_Reordered_HighFusionRatio_64"
+    repr: "Fused(High Fusion Ratio 64 + Reordered)"
+  - name: "GPU_Fused_Reordered_SeqReduceRowBalance"
+    repr: "Fused(Reordered)"
+#  - name: "GPU_Fused_SeqReduceBColsBlocking_16"
+#    repr: "Fused Blocking(16)"
+#  - name: "GPU_Fused_SeqReduceBColsBlocking_32"
+#    repr: "Fused Blocking(32)"
 #  - name: "GPU_Fused_SeqReduceBColsBlocking_64"
 #    repr: "Fused Blocking(64)"
 
