Fix MKL interface

--- a/binding-project/CMakeLists.txt
+++ b/binding-project/CMakeLists.txt
@@ -7,16 +7,18 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS} -std=c++17  -march=na
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)
 
+SET(MKL_INTERFACE_FULL intel_lp64)
+find_package(MKL REQUIRED)
 find_package(Python REQUIRED COMPONENTS Development)
 find_package(Torch REQUIRED)
 find_package( OpenMP REQUIRED)
-if(NOT TARGET MKL::MKL)
-    find_package(MKL CONFIG OPTIONAL_COMPONENTS)
-endif()
+#if(NOT TARGET MKL::MKL)
+
+#endif()
 if(TARGET MKL::MKL)
-    set(MKL_INTERFACE "lp64")
     add_definitions(-DMKL)
     message(STATUS "${MKL_IMPORTED_TARGETS}")
+    message(STATUS "${MKL_LIBRARIES}")
 endif ()
 set(SYM_SW_GCN ${CMAKE_CURRENT_SOURCE_DIR})
 file(GLOB SYM_SW_GCN_SRC
@@ -35,8 +37,8 @@ target_include_directories(sw_gcn PRIVATE
         ${TORCH_INCLUDE_DIRS}
 )
 target_link_libraries(sw_gcn PRIVATE
+        $<LINK_ONLY:MKL::MKL>
         ${TORCH_LIBRARIES}
         Python::Python
         OpenMP::OpenMP_CXX
-        $<LINK_ONLY:MKL::MKL>
 )
