--- a/fusion/scripts/plot_gpu/fused_conf.yaml
+++ b/fusion/scripts/plot_gpu/fused_conf.yaml
@@ -17,14 +17,14 @@ impls:
     repr: "Fused128_128(High Fusion Ratio 64 + Packing)"
 #  - name: "GPU_Fused_Reordered_SeqReduceRowBalance"
 #    repr: "Fused(Reordered)"
-  - name: "GPU_Fused_Reordered_32_HighFusionRatio_8"
-    repr: "Fused32_128(High Fusion Ratio 8 + Packing)"
-  - name: "GPU_Fused_Reordered_32_HighFusionRatio_16"
-    repr: "Fused32_128(High Fusion Ratio 16 + Packing)"
-  - name: "GPU_Fused_Reordered_32_HighFusionRatio_32"
-    repr: "Fused32_128(High Fusion Ratio 32 + Packing)"
-  - name: "GPU_Fused_Reordered_32_HighFusionRatio_64"
-    repr: "Fused32_128(High Fusion Ratio 64 + Packing)"
+#  - name: "GPU_Fused_Reordered_32_HighFusionRatio_8"
+#    repr: "Fused32_128(High Fusion Ratio 8 + Packing)"
+#  - name: "GPU_Fused_Reordered_32_HighFusionRatio_16"
+#    repr: "Fused32_128(High Fusion Ratio 16 + Packing)"
+#  - name: "GPU_Fused_Reordered_32_HighFusionRatio_32"
+#    repr: "Fused32_128(High Fusion Ratio 32 + Packing)"
+#  - name: "GPU_Fused_Reordered_32_HighFusionRatio_64"
+#    repr: "Fused32_128(High Fusion Ratio 64 + Packing)"
 #  - name: "GPU_Fused_SeqReduceBColsBlocking_16"
 #    repr: "Fused Blocking(16)"
 #  - name: "GPU_Fused_SeqReduceBColsBlocking_32"
