Add try catch for reorder matrix script

--- a/fusion/scripts/plot_gpu/fused_conf.yaml
+++ b/fusion/scripts/plot_gpu/fused_conf.yaml
@@ -15,6 +15,22 @@ impls:
     repr: "Fused128_128(High Fusion Ratio 32 + Packing)"
   - name: "GPU_Fused_Reordered_HighFusionRatio_64"
     repr: "Fused128_128(High Fusion Ratio 64 + Packing)"
+#  - name: "GPU_FusedNoSynch_Reordered_HighFusionRatio_8"
+#    repr: "Fused128_128_NoSynch(High Fusion Ratio 8 + Packing)"
+#  - name: "GPU_FusedNoSynch_Reordered_HighFusionRatio_16"
+#    repr: "Fused128_128_NoSynch(High Fusion Ratio 16 + Packing)"
+#  - name: "GPU_FusedNoSynch_Reordered_HighFusionRatio_32"
+#    repr: "Fused128_128_NoSynch(High Fusion Ratio 32 + Packing)"
+#  - name: "GPU_FusedNoSynch_Reordered_HighFusionRatio_64"
+#    repr: "Fused128_128_NoSynch(High Fusion Ratio 64 + Packing)"
+  - name: "GPU_Fused_Redundant_HighFusionRatio_8"
+    repr: "Fused128_128(High Fusion Ratio 8 + Redundant)"
+  - name: "GPU_Fused_Redundant_HighFusionRatio_16"
+    repr: "Fused128_128(High Fusion Ratio 16 + Redundant)"
+  - name: "GPU_Fused_Redundant_HighFusionRatio_32"
+    repr: "Fused128_128(High Fusion Ratio 32 + Redundant)"
+  - name: "GPU_Fused_Redundant_HighFusionRatio_64"
+    repr: "Fused128_128(High Fusion Ratio 64 + Redundant)"
 #  - name: "GPU_Fused_Reordered_SeqReduceRowBalance"
 #    repr: "Fused(Reordered)"
 #  - name: "GPU_Fused_Reordered_32_HighFusionRatio_8"
