--- a/fusion/gpu/CMakeLists.txt
+++ b/fusion/gpu/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CUDA_STANDARD 14)
 
 set(CMAKE_CUDA_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
-set(CMAKE_CUDA_ARCHITECTURES 50 61 70 80 86)
+set(CMAKE_CUDA_ARCHITECTURES 70 80 86)
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -lineinfo")
 #set(CMAKE_CUDA_ARCHITECTURES 50 75)
 # TODO: after you had cmake 3.24, you can use the below line so no need to enter the version
