--- a/fusion/scripts/plot_gpu/fused_conf.yaml
+++ b/fusion/scripts/plot_gpu/fused_conf.yaml
@@ -8,13 +8,29 @@ impls:
 #  - name: "GPU_Fused_SeqReduceRowBalance"
 #    repr: "Fused"
   - name: "GPU_Fused_Reordered_HighFusionRatio_8"
-    repr: "Fused128_128(High Fusion Ratio 8 + Packing)"
+    repr: "Fused 8 + Unfused Packing"
   - name: "GPU_Fused_Reordered_HighFusionRatio_16"
-    repr: "Fused128_128(High Fusion Ratio 16 + Packing)"
+    repr: "Fused 16 + Unfused Packing"
   - name: "GPU_Fused_Reordered_HighFusionRatio_32"
-    repr: "Fused128_128(High Fusion Ratio 32 + Packing)"
+    repr: "Fused 32 + Unfused Packing"
   - name: "GPU_Fused_Reordered_HighFusionRatio_64"
-    repr: "Fused128_128(High Fusion Ratio 64 + Packing)"
+    repr: "Fused 64 + Unfused Packing"
+  - name: "GPU_2LFused_Reordered_HighFusionRatio_8"
+    repr: "Recursive Fused 8 + Unfused Packing"
+  - name: "GPU_2LFused_Reordered_HighFusionRatio_16"
+    repr: "Recursive Fused 16 + Unfused Packing"
+  - name: "GPU_2LFused_Reordered_HighFusionRatio_32"
+    repr: "Recursive Fused 32 + Unfused Packing"
+  - name: "GPU_2LFused_Reordered_HighFusionRatio_64"
+    repr: "Recursive Fused 64 + Unfused Packing"
+#  - name: "GPU_AtomicFused_Reordered_HighFusionRatio_8"
+#    repr: "Fused128_128(High Fusion Ratio 8 + Packing)"
+#  - name: "GPU_AtomicFused_Reordered_HighFusionRatio_16"
+#    repr: "Fused128_128(High Fusion Ratio 16 + Packing)"
+#  - name: "GPU_AtomicFused_Reordered_HighFusionRatio_32"
+#    repr: "Fused128_128(High Fusion Ratio 32 + Packing)"
+#  - name: "GPU_AtomicFused_Reordered_HighFusionRatio_64"
+#    repr: "Fused128_128(High Fusion Ratio 64 + Packing)"
 #  - name: "GPU_FusedNoSynch_Reordered_HighFusionRatio_8"
 #    repr: "Fused128_128_NoSynch(High Fusion Ratio 8 + Packing)"
 #  - name: "GPU_FusedNoSynch_Reordered_HighFusionRatio_16"
@@ -23,14 +39,14 @@ impls:
 #    repr: "Fused128_128_NoSynch(High Fusion Ratio 32 + Packing)"
 #  - name: "GPU_FusedNoSynch_Reordered_HighFusionRatio_64"
 #    repr: "Fused128_128_NoSynch(High Fusion Ratio 64 + Packing)"
-  - name: "GPU_Fused_Redundant_HighFusionRatio_8"
-    repr: "Fused128_128(High Fusion Ratio 8 + Redundant)"
-  - name: "GPU_Fused_Redundant_HighFusionRatio_16"
-    repr: "Fused128_128(High Fusion Ratio 16 + Redundant)"
-  - name: "GPU_Fused_Redundant_HighFusionRatio_32"
-    repr: "Fused128_128(High Fusion Ratio 32 + Redundant)"
-  - name: "GPU_Fused_Redundant_HighFusionRatio_64"
-    repr: "Fused128_128(High Fusion Ratio 64 + Redundant)"
+#  - name: "GPU_Fused_Redundant_HighFusionRatio_8"
+#    repr: "Fused128_128(High Fusion Ratio 8 + Redundant)"
+#  - name: "GPU_Fused_Redundant_HighFusionRatio_16"
+#    repr: "Fused128_128(High Fusion Ratio 16 + Redundant)"
+#  - name: "GPU_Fused_Redundant_HighFusionRatio_32"
+#    repr: "Fused128_128(High Fusion Ratio 32 + Redundant)"
+#  - name: "GPU_Fused_Redundant_HighFusionRatio_64"
+#    repr: "Fused128_128(High Fusion Ratio 64 + Redundant)"
 #  - name: "GPU_Fused_Reordered_SeqReduceRowBalance"
 #    repr: "Fused(Reordered)"
 #  - name: "GPU_Fused_Reordered_32_HighFusionRatio_8"
