--- a/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
+++ b/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
@@ -1,6 +1,13 @@
 impls:
 - name: "GPU_Unfused_SeqReduceRowBalance"
   repr: "Unfused Baseline"
+- name: "GPU_Unfused_SeqReduceRowCoarsened"
+  repr: "Unfused Coarsened"
+  row_tiles:
+    - 8
+    - 16
+    - 32
+    - 64
 - name: "GPU_Fused_Reordered_HighFusionRatio"
   repr: "Fused + Unfused Packing"
   row_tiles:
