--- a/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
+++ b/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
@@ -15,6 +15,14 @@ impls:
     - 16
     - 32
     - 64
+
+- name: "GPU_Fused_Reordered_HighFusionRatio_MBC"
+  repr: "Fused + Unfused Packing + BCol Coarsened"
+  row_tiles:
+    - 8
+    - 16
+    - 32
+    - 64
 #- name: "GPU_Fused_Redundant_HighFusionRatio"
 #  repr: "Fused + Unfused Packing + Redundant"
 #  row_tiles:
