--- a/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
+++ b/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
@@ -15,14 +15,21 @@ impls:
     - 16
     - 32
     - 64
-
-- name: "GPU_Fused_Reordered_HighFusionRatio_MBC"
-  repr: "Fused + Unfused Packing + BCol Coarsened"
+- name: "GPU_Fused_Reordered_HighFusionRatio_P4"
+  repr: "Fused P4 + Unfused Packing"
   row_tiles:
     - 8
     - 16
     - 32
     - 64
+
+#- name: "GPU_Fused_Reordered_HighFusionRatio_MBC"
+#  repr: "Fused + Unfused Packing + BCol Coarsened"
+#  row_tiles:
+#    - 8
+#    - 16
+#    - 32
+#    - 64
 #- name: "GPU_Fused_Redundant_HighFusionRatio"
 #  repr: "Fused + Unfused Packing + Redundant"
 #  row_tiles:
@@ -44,10 +51,10 @@ impls:
 #    - 16
 #    - 32
 #    - 64
-- name: "GPU_AtomicFused_Reordered_HighFusionRatio"
-  repr: "Atomic Fused + Unfused Packing"
-  row_tiles:
-    - 8
-    - 16
-    - 32
-    - 64
+#- name: "GPU_AtomicFused_Reordered_HighFusionRatio"
+#  repr: "Atomic Fused + Unfused Packing"
+#  row_tiles:
+#    - 8
+#    - 16
+#    - 32
+#    - 64
