--- a/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
+++ b/fusion/scripts/plot_gpu/fused_tuning_conf.yaml
@@ -22,13 +22,13 @@ impls:
     - 16
     - 32
     - 64
-- name: "GPU_Fused_ReorderedResultPacked_HighFusionRatio"
-  repr: "Fused + Unfused/Result Packing"
-  row_tiles:
-    - 8
-    - 16
-    - 32
-    - 64
+#- name: "GPU_Fused_ReorderedResultPacked_HighFusionRatio"
+#  repr: "Fused + Unfused/Result Packing"
+#  row_tiles:
+#    - 8
+#    - 16
+#    - 32
+#    - 64
 #- name: "GPU_Fused_Reordered_HighFusionRatio_P4"
 #  repr: "Fused P4 + Unfused Packing"
 #  row_tiles:
@@ -72,10 +72,17 @@ impls:
 #    - 16
 #    - 32
 #    - 64
-#- name: "GPU_AtomicFused_Reordered_HighFusionRatio"
-#  repr: "Atomic Fused + Unfused Packing"
-#  row_tiles:
-#    - 8
-#    - 16
-#    - 32
-#    - 64
+- name: "GPU_AtomicFused_Reordered_HighFusionRatio"
+  repr: "Atomic Fused + Unfused Packing"
+  row_tiles:
+    - 8
+    - 16
+    - 32
+    - 64
+- name: "GPU_NoAtomicFused_Reordered_HighFusionRatio"
+  repr: "No Atomic Fused + Unfused Packing"
+  row_tiles:
+    - 8
+    - 16
+    - 32
+    - 64
